Modify JAWS UG アーキテクチャ専門支部 note

--- a/content/event/JAWS-UG アーキテクチャ専門支部 2019-03.md
+++ b/content/event/JAWS-UG アーキテクチャ専門支部 2019-03.md
@@ -17,3 +17,5 @@ draft: false
 > Blueはできるとおもうけど、Greenまでできないかも。
 
 [awspecでAWSリソースをテストする](https://dev.classmethod.jp/cloud/aws/use-awspec-to-test-aws-resrouces/)
+
+LambdaのAddPermissionができれば、権限昇格ができる
